assets/css/style.css
/* ... */
.auto-container {
    position: static;
    max-width: 1320px;
    padding: 0px 15px;
    margin: 0 auto;
}

.row {
    --bs-gutter-x: 30px;
}

.gutter-y-30 {
    --bs-gutter-y: 24px;
}

body {
    font-family: var(--thm-font);
    color: var(--thm-gray);
    font-size: 17px;
    line-height: 32px;
    font-weight: 400;
}

body.locked {
    overflow: hidden;
}

a {
    color: var(--thm-gray);
    transition: all 200ms linear;
    transition-delay: 0.1s;
}

a,
a:hover,
a:focus,
a:visited {
    text-decoration: none;
}

::-webkit-input-placeholder {
    color: inherit;
    opacity: 1;
}

:-ms-input-placeholder {
    color: inherit;
    opacity: 1;
}

::-ms-input-placeholder {
    color: inherit;
    opacity: 1;
}

::placeholder {
    color: inherit;
    opacity: 1;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--thm-black);
    font-family: var(--thm-font);
    font-weight: 700;
    margin: 0;
}

p {
    margin: 0;
}

dl,
ol,
ul {
    margin-top: 0;
    margin-bottom: 0;
}

::-webkit-input-placeholder {
    color: inherit;
    opacity: 1;
}

:-ms-input-placeholder {
    color: inherit;
    opacity: 1;
}

::-ms-input-placeholder {
    color: inherit;
    opacity: 1;
}

::placeholder {
    color: inherit;
    opacity: 1;
}

.fancybox-slide .fancybox-image-wrap {
    border-radius: 10px;
    overflow: hidden;
}



.page-wrapper {
    position: relative;
    margin: 0 auto;
    width: 100%;
    min-width: 300px;
    overflow: hidden;
}

.container {
    padding-left: 15px;
    padding-right: 15px;
}


@media (min-width: 1200px) {
    .container {
        max-width: 1320px;
    }
}


::-webkit-input-placeholder {
    color: inherit;
    opacity: 1;
}

:-ms-input-placeholder {
    color: inherit;
    opacity: 1;
}

::-ms-input-placeholder {
    color: inherit;
    opacity: 1;
}

::placeholder {
    color: inherit;
    opacity: 1;
}

button {
    cursor: pointer;
    border: none;
    background: transparent;
    padding: 0;
}

ul,
li {
    list-style: none;
    margin: 0;
    padding: 0;
}

ol,
li {
    margin: 0;
    padding: 0;
}

img {
    max-width: 100%;
    height: auto;
    transition-delay: 0.1s;
    transition-timing-function: ease-in-out;
    transition-duration: 0.7s;
    transition-property: all;
}

/* Form validation styles */
input:focus,
textarea:focus,
select:focus {
    border-color: #43c3ea;
    outline: none;
}

#contact-form input[type="text"].error {
    border-color: red;
}

#contact-form input[type="email"].error {
    border-color: red;
}

#contact-form select.error {
    border-color: red;
}

#contact-form textarea.error {
    border-color: red;
}

#contact-form label.error {
    display: none !important;
}




/*=============== Color-Layout =============*/
.switcher {
    position: fixed;
    top: 320px;
    z-index: 99;
}

.switcher .switch_btn {
    position: absolute;
    top: 0px;
    right: -50px;
    z-index: -1;
}

.switcher .switch_btn button {
    width: 50px;
    height: 50px;
    color: #fff;
    line-height: 50px;
    cursor: pointer;
    border-radius: 0;
    margin-left: 0;
    transition: all 500ms ease;
    background: rgba(0, 0, 0, 0.90);
}

.switcher .switch_menu {
    position: absolute;
    width: 220px;
    height: 30px;
    background: transparent;
    display: none;
    top: 0px;
    left: 60px;
    bottom: 0;
    margin: 10px 0;
}

.switcher #styleOptions li {
    position: relative;
    display: inline-block;
    width: 30px;
    height: 30px;
    margin-right: 3px;
}

.switcher #styleOptions li:last-child {
    margin-right: 0;
}

.switcher #styleOptions li a {
    position: relative;
    display: inline-block;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    box-shadow: 0 0 0 0px #fff;
}

.switcher #styleOptions li a.blue-color {
    background: #1266e3;
}

.switcher #styleOptions li a.pink-color {
    background: #e70887;
}

.switcher #styleOptions li a.violet-color {
    background: #6936d8;
}

.switcher #styleOptions li a.crimson-color {
    background: #ba0913;
}

.switcher #styleOptions li a.orange-color {
    background: #FFA500;
}

.switcher #styleOptions li a.green-color {
    background: #95c41f;
}




.rating-box-style1 {
    position: relative;
    display: block;
}

.rating-box-style1 ul {
    position: relative;
    display: flex;
}

.rating-box-style1 ul li {
    position: relative;
    display: block;
    line-height: 0;
}

.rating-box-style1 ul li+li {
    padding-left: 10px;
}

.rating-box-style1 ul li span {
    position: relative;
    display: inline-block;
    color: #e4492e;
    font-size: 20px;
    cursor: pointer;
}




/** Thm Social Link **/
.thm-social-link {
    position: relative;
    display: block;
    padding-top: 30px;
}

.thm-social-link ul {
    position: relative;
    display: block;
}

.thm-social-link ul li {
    position: relative;
    float: left;
    margin-right: 10px;
}

.thm-social-link ul li:last-child {
    margin-right: 0;
}

.thm-social-link ul li a {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 50px;
    width: 50px;
    background-color: rgba(var(--thm-black-rgb), 1);
    border-radius: 5px;
    color: #ffffff;
    font-size: 18px;
    text-align: center;
    transition: all 200ms linear;
    transition-delay: 0.1s;
    z-index: 1;
}

.thm-social-link ul li a:before {
    position: absolute;
    top: 0px;
    left: 0px;
    bottom: 0px;
    right: 0px;
    background-color: rgba(var(--thm-base-rgb), 1);
    border-radius: 5px;
    content: "";
    opacity: 0;
    transform: scale(0.5);
    transform-style: preserve-3d;
    transition: all 0.4s cubic-bezier(0.62, 0.21, 0.45, 1.52);
    z-index: -1;
}

.thm-social-link ul li:hover a:before {
    opacity: 1;
    transform: scale(1);
}

.thm-social-link ul li:hover a {
    color: #ffffff;
}
/* ... */

